--- a/app/containerDetails/containerDetails.html
+++ b/app/containerDetails/containerDetails.html
@@ -121,15 +121,64 @@
     </div>
 
     <div ng-show="activeTab=='logs'">
-        <div ng-class="{'panel-body col-md-6': stdErrLog.length>0, 'panel-body col-md-12': !stdErrLog.length>0}" ng-show="stdOutLog.length>0">
-            <pre class="pre-scrollable">
-            {{stdOutLog}}
-            </pre>
+        <div class="col-md-6">
+            <button type="button" ng-click="switchStdOutPanel()" ng-class="{'btn btn-primary': logSettings['showStdOut'], 'btn btn-info': !logSettings['showStdOut']}">
+                <span ng-class="{'glyphicon glyphicon-check': logSettings['showStdOut'], 'glyphicon glyphicon-unchecked': !logSettings['showStdOut']}"></span>
+                Standard output
+            </button>
         </div>
-        <div ng-class="{'panel-body col-md-6': stdOutLog.length>0, 'panel-body col-md-12': !stdOutLog.length>0}" ng-show="stdErrLog.length>0">
-            <pre class="pre-scrollable">
-            {{stdErrLog}}
-            </pre>
+        <div class="col-md-6">
+            <button type="button" ng-click="switchStdErrPanel()" ng-class="{'btn btn-primary': logSettings['showStdErr'], 'btn btn-info': !logSettings['showStdErr']}">
+                <span ng-class="{'glyphicon glyphicon-check': logSettings['showStdErr'], 'glyphicon glyphicon-unchecked': !logSettings['showStdErr']}"></span>
+                Standard error
+            </button>
+        </div>
+        <br/>
+        <br/>
+
+        <div ng-class="{'col-md-6': logSettings['showStdErr'], 'col-md-12': !logSettings['showStdErr']}" ng-show="logSettings['showStdOut']">
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    <div class="form-inline">
+                        <button type="button" ng-click="" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-refresh"></span>Reload</button>
+                        <button type="button" ng-click="" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-unchecked"></span>Show timestamp</button>
+                        <div class="input-group">
+                            <div class="input-group-addon">Tail lines:</div>
+                            <input type="number" max="9999" value="1000" class="form-control">
+                        </div>
+                        <button type="button" ng-click="" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-unchecked"></span>all</button>
+
+                    </div>
+                </div>
+                <div class="panel-body">
+                        <pre class="pre-scrollable">
+                            {{stdOutLog}}
+                        </pre>
+                </div>
+            </div>
+
+        </div>
+        <div ng-class="{'col-md-6': logSettings['showStdOut'], 'col-md-12': !logSettings['showStdOut']}" ng-show="logSettings['showStdErr']">
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    <div class="form-inline">
+                        <button type="button" ng-click="" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-refresh"></span>Reload</button>
+                        <button type="button" ng-click="" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-unchecked"></span>Show timestamp</button>
+                        <div class="input-group">
+                            <div class="input-group-addon">Tail lines:</div>
+                            <input type="number" max="9999" value="1000" class="form-control">
+                        </div>
+                        <button type="button" ng-click="" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-unchecked"></span>all</button>
+                    </div>
+                </div>
+                <div class="panel-body">
+                         <pre class="pre-scrollable">
+                            {{stdErrLog}}
+                        </pre>
+                </div>
+            </div>
+
+
         </div>
     </div>
 
