--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="assets/img/docker_icon.jpg">
     <link rel='stylesheet' href='assets/libs/bootstrap/dist/css/bootstrap.css'>
     <link rel="stylesheet" href="assets/libs/json-formatter/dist/json-formatter.min.css">
+    <link rel="stylesheet" href="assets/libs/xterm.js/src/xterm.css">
     <link rel='stylesheet' href='assets/css/custom.css'>
 </head>
 <body>
@@ -49,6 +50,7 @@
 <script src="assets/libs/angular-route/angular-route.js"></script>
 <script src="assets/libs/angular-resource/angular-resource.js"></script>
 <script src="assets/libs/json-formatter/dist/json-formatter.js"></script>
+<script src="assets/libs/xterm.js/src/xterm.js"></script>
 <!---->
 <script src="app/app.modules.js"></script>
 <script src="app/app.filters.js"></script>
