Decreasing head size Showing container state properly Showing entry point/commands

--- a/app/containerDetails/containerDetails.html
+++ b/app/containerDetails/containerDetails.html
@@ -1,93 +1,89 @@
 <div class="col-md-12 pull-right">
     <div class="row">
         <div class="col-md-12">
-            <h1>Container: <strong>{{containerDetails.Name.substring(1).toUpperCase()}}</strong></h1>
+            <h3>Container: <strong>{{containerDetails.Name.substring(1).toUpperCase()}}</strong>
+                <span ng-show='containerDetails.State.Running==true && containerDetails.State.Paused==false' class="label label-success">Running</span>
+                <span ng-show='containerDetails.State.Paused==true' class="label label-warning">Paused</span>
+                <span ng-show='containerDetails.State.Restarting==true' class="label label-info">Restarting</span>
+            <span ng-show='containerDetails.State.Running == false && containerDetails.State.Restarting == false && containerDetails.State.Paused ==false'
+                  class="label label-default">Stopped</span>
+            <span
+                    ng-show='containerDetails.State.Running == false && containerDetails.State.Restarting == false && containerDetails.State.Paused ==false&& containerDetails.State.ExitCode ==137'
+                    class="label label-danger">Probably killed with 9</span>
+            <span
+                    ng-show='containerDetails.State.Running == false && containerDetails.State.Restarting == false && containerDetails.State.Paused ==false&& containerDetails.State.ExitCode ==130'
+                    class="label label-danger">Probably terminated with Ctrl-C</span>
+                <span ng-show='containerDetails.State.OOMKilled==true' class="label label-danger">Out of memory</span></h3>
         </div>
     </div>
     <hr/>
     <div class="row">
-        <div class="col-md-1">Name:</div>
+        <div class="col-md-1 text-right"><strong>Name:</strong></div>
         <div class="col-md-3">{{containerDetails.Name.toUpperCase()}}</div>
-        <div class="col-md-1">Network mode:</div>
+        <div class="col-md-1 text-right"><strong>Network mode:</strong></div>
         <div class="col-md-3">{{containerDetails.HostConfig.NetworkMode}}</div>
-        <div class="col-md-1">CPU share:</div>
+        <div class="col-md-1 text-right"><strong>CPU share:</strong></div>
         <div class="col-md-3">{{containerDetails.Config.CpuShares}}</div>
     </div>
     <div class="row">
-        <div class="col-md-1">Hostname:</div>
+        <div class="col-md-1 text-right"><strong>Hostname:</strong></div>
         <div class="col-md-3">{{containerDetails.Config.Hostname}}</div>
-        <div class="col-md-1">Host bridge:</div>
+        <div class="col-md-1 text-right"><strong>Host bridge:</strong></div>
         <div class="col-md-3">{{containerDetails.NetworkSettings.Bridge}}</div>
-        <div class="col-md-1">CPU set:</div>
+        <div class="col-md-1 text-right"><strong>CPU set:</strong></div>
         <div class="col-md-3">{{containerDetails.Config.Cpuset}}</div>
     </div>
     <div class="row">
-        <div class="col-md-1">Image:</div>
+        <div class="col-md-1 text-right"><strong>Image:</strong></div>
         <div class="col-md-3"><a ng-href="#/imageDetails/{{containerDetails.Image}}">
             <samp>
                 <span class="label label-primary">{{containerDetails.Config.Image | limitTo:50}}</span>
             </samp></a>
         </div>
-        <div class="col-md-1">Ports:</div>
+        <div class="col-md-1 text-right"><strong>Ports:</strong></div>
         <div class="col-md-3"><span class="label label-danger">TBD</span></div>
-        <div class="col-md-1">PID on host:</div>
+        <div class="col-md-1 text-right"><strong>PID on host:</strong></div>
         <div class="col-md-3">{{containerDetails.State.Pid}}</div>
     </div>
     <div class="row">
-        <div class="col-md-1">Created:</div>
+        <div class="col-md-1 text-right"><strong>Created:</strong></div>
         <div class="col-md-3">{{containerDetails.Created | date:'medium'}}</div>
-        <div class="col-md-1">IPv4</div>
+        <div class="col-md-1 text-right"><strong>IPv4</strong></div>
         <div class="col-md-3">{{containerDetails.NetworkSettings.IPAddress}}/{{containerDetails.NetworkSettings.IPPrefixLen}}</div>
-        <div class="col-md-1">Driver:</div>
+        <div class="col-md-1 text-right"><strong>Driver:</strong></div>
         <div class="col-md-3">{{containerDetails.Driver}}</div>
     </div>
     <div class="row">
-        <div class="col-md-1">Started:</div>
+        <div class="col-md-1 text-right"><strong>Started:</strong></div>
         <div class="col-md-3">{{containerDetails.State.StartedAt| date:'medium'}}</div>
-        <div class="col-md-1">Gateway:</div>
+        <div class="col-md-1 text-right"><strong>Gateway:</strong></div>
         <div class="col-md-3">{{containerDetails.NetworkSettings.Gateway}}</div>
-        <div class="col-md-1">ExecDriver:</div>
+        <div class="col-md-1 text-right"><strong>ExecDriver:</strong></div>
         <div class="col-md-3">{{containerDetails.ExecDriver}}</div>
     </div>
     <div class="row">
-        <div class="col-md-1">Finished:</div>
-        <div class="col-md-3">{{containerDetails.State.FinishedAt| date:'medium'}} <span class="label label-danger">Fix it</span></div>
-        <div class="col-md-1">DNS:</div>
+        <div class="col-md-1 text-right"><strong>Finished:</strong></div>
+        <div class="col-md-3">{{containerDetails.State.Running==true?"No":containerDetails.State.FinishedAt| date:'medium'}}</div>
+        <div class="col-md-1 text-right"><strong>DNS:</strong></div>
         <div class="col-md-3">{{containerDetails.HostConfig.Dns}}</div>
-        <div class="col-md-1"></div>
-        <div class="col-md-3"></div>
-    </div>
-    <div class="row">
-        <div class="col-md-1">State:</div>
-        <div class="col-md-3"><span class="label label-danger">TBD</span></div>
-        <div class="col-md-1"></div>
-        <div class="col-md-3"></div>
-        <div class="col-md-1"></div>
-        <div class="col-md-3"></div>
-    </div>
-    <div class="row">
-        <div class="col-md-1">Restart count:</div>
+        <div class="col-md-1 text-right"><strong>Restart count:</strong></div>
         <div class="col-md-3">{{containerDetails.RestartCount}}</div>
-        <div class="col-md-1"></div>
-        <div class="col-md-3"></div>
-        <div class="col-md-1"></div>
-        <div class="col-md-3"></div>
     </div>
     <div class="row">
-        <div class="col-md-1">Command:</div>
-        <div class="col-md-3">{{containerDetails.Config.Cmd}}<span class="label label-danger">Fix it</span></div>
-        <div class="col-md-1"></div>
-        <div class="col-md-3"></div>
-        <div class="col-md-1"></div>
-        <div class="col-md-3"></div>
-    </div>
-    <div class="row">
-        <div class="col-md-1">Working dir:</div>
+        <div class="col-md-1 text-right"><strong>Working dir:</strong></div>
         <div class="col-md-3">{{containerDetails.Config.WorkingDir}}</div>
         <div class="col-md-1"></div>
         <div class="col-md-3"></div>
         <div class="col-md-1"></div>
         <div class="col-md-3"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-1 text-right"><strong>Command:</strong></div>
+        <div class="col-md-11"><code>{{containerDetails.Config.Cmd.join(' ')}}</code></div>
+    </div>
+    <div class="row">
+        <div class="col-md-1 text-right"><strong>Entry point:</strong></div>
+        <div class="col-md-11"><code>{{containerDetails.Config.Entrypoint.join(' ')}}</code></div>
     </div>
     <hr/>
     <ul class="nav nav-tabs">
@@ -113,22 +109,21 @@
                 <td ng-repeat="processItem in process">
                     {{processItem}}
                 </td>
-
             </tr>
             </tbody>
-
         </table>
     </div>
-
     <div ng-show="activeTab=='logs'">
         <div class="col-md-6">
-            <button type="button" ng-click="switchStdOutPanel()" ng-class="{'btn btn-primary': logSettings['showStdOut'], 'btn btn-info': !logSettings['showStdOut']}">
+            <button type="button" ng-click="switchStdOutPanel()"
+                    ng-class="{'btn btn-primary': logSettings['showStdOut'], 'btn btn-info': !logSettings['showStdOut']}">
                 <span ng-class="{'glyphicon glyphicon-check': logSettings['showStdOut'], 'glyphicon glyphicon-unchecked': !logSettings['showStdOut']}"></span>
                 Standard output
             </button>
         </div>
         <div class="col-md-6">
-            <button type="button" ng-click="switchStdErrPanel()" ng-class="{'btn btn-primary': logSettings['showStdErr'], 'btn btn-info': !logSettings['showStdErr']}">
+            <button type="button" ng-click="switchStdErrPanel()"
+                    ng-class="{'btn btn-primary': logSettings['showStdErr'], 'btn btn-info': !logSettings['showStdErr']}">
                 <span ng-class="{'glyphicon glyphicon-check': logSettings['showStdErr'], 'glyphicon glyphicon-unchecked': !logSettings['showStdErr']}"></span>
                 Standard error
             </button>
@@ -140,7 +135,9 @@
             <div class="panel panel-success">
                 <div class="panel-heading">
                     <div class="form-inline">
-                        <button type="button" ng-click="refreshStdOutLogs()" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-refresh"></span>Reload</button>
+                        <button type="button" ng-click="refreshStdOutLogs()" class="btn btn-primary btn-sm"><span
+                                class="glyphicon glyphicon-refresh"></span>Reload
+                        </button>
                         <button type="button" ng-click="switchShowStdOutTimestamp()" class="btn btn-primary btn-sm">
                             <span ng-class="{'glyphicon glyphicon-unchecked':!logSettings['stdOutTimestamp'], 'glyphicon glyphicon-check':logSettings['stdOutTimestamp']}"></span>Show
                             timestamp
@@ -168,7 +165,9 @@
             <div class="panel panel-success">
                 <div class="panel-heading">
                     <div class="form-inline">
-                        <button type="button" ng-click="refreshStdErrLogs()" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-refresh"></span>Reload</button>
+                        <button type="button" ng-click="refreshStdErrLogs()" class="btn btn-primary btn-sm"><span
+                                class="glyphicon glyphicon-refresh"></span>Reload
+                        </button>
                         <button type="button" ng-click="switchShowStdErrTimestamp()" class="btn btn-primary btn-sm">
                             <span ng-class="{'glyphicon glyphicon-unchecked':!logSettings['stdErrTimestamp'], 'glyphicon glyphicon-check':logSettings['stdErrTimestamp']}"></span>Show
                             timestamp
