Creating a refresh animation to add to the lengthy processes

--- a/app/hosts/hosts.html
+++ b/app/hosts/hosts.html
@@ -1,4 +1,5 @@
 <div class="col-md-12">
+    <span class="glyphicon glyphicon-refresh spin"></span>
     <div>
     </div>
     <form class="form-inline" role="form">
@@ -9,7 +10,6 @@
         <button type="submit" class="btn btn-success " ng-click="addHost()"><span class="glyphicon glyphicon-plus"></span> Add</button>
         <br/>
         <br/>
-
     </form>
     <div class="table-responsive">
         <table class="table table-condensed table-hover table-striped table-bordered">
