Adding load animation to during image list querying

--- a/app/images/images.html
+++ b/app/images/images.html
@@ -5,6 +5,9 @@
         </div>
     </div>
     <hr/>
+    <div class="alert alert-info" role="alert" ng-show="imageListing">
+        <h3 class="panel-title"><span class="glyphicon glyphicon-refresh spin"></span> {{imageListingMessage}}</h3>
+    </div>
     <table class="table table-condensed table-hover table-striped table-bordered">
         <tr class="success">
             <td colspan="5">
