--- a/app/imageDetails/imageDetails.html
+++ b/app/imageDetails/imageDetails.html
@@ -6,6 +6,9 @@
         </div>
     </div>
     <hr/>
+    <div class="alert alert-info" role="alert" ng-show="imageDataLoading">
+        <h3 class="panel-title"><span class="glyphicon glyphicon-refresh spin"></span> {{imageDataLoadingMessage}}</h3>
+    </div>
     <div class="row">
         <div class="col-md-1">ID / Parent ID:</div>
         <div class="col-md-4"><a ng-href="#/imageDetails/{{imageDetails.Id}}">
